upload refatorando e tirando erros